--- a/my-site/miniproject.css
+++ b/my-site/miniproject.css
@@ -77,7 +77,8 @@ i {
 @media (max-width: 1400px) {
   .header-container,
   .banner-container,
-  .main-container {
+  .main-container,
+  .footer-container {
     padding: 25px 30px 20px;
   }
 }
@@ -170,6 +171,7 @@ i {
 
 .main-content {
   max-width: 1500px;
+  margin-bottom: 40px;
 }
 
 .main-header {
@@ -182,7 +184,7 @@ i {
 
 .products {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  grid-template-columns: repeat(5, minmax(220px, 1fr));
   gap: 16px;
   margin-bottom: 30px;
 }
@@ -193,6 +195,7 @@ i {
   overflow: hidden;
   transition: background-color 0.2s ease;
   position: relative;
+  margin-bottom: 40px;
 }
 
 .cardimg {
@@ -228,4 +231,43 @@ i {
 .card-price {
   font-size: 18px;
   font-weight: 500;
+}
+
+.card-description {
+  font-size: 14px;
+  color: #909090;
+  letter-spacing: -0.2px;
+  font-weight: 400;
+}
+
+.footer {
+  background-color: #f8f9fa;
+  border: 1px solid #e5e5e5;
+  margin-top: auto;
+}
+
+.footer-container {
+  max-width: 1500px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 40px 20px 20px;
+}
+
+.footer-main p {
+  font-size: 20px;
+  margin-bottom: 8px;
+}
+
+.footer-main ul {
+  display: inline-grid;
+  grid-template-columns: repeat(5, auto);
+  gap: 32px;
+  list-style: none;
+  font-size: 14px;
+  line-height: 1.5;
+  padding: 20px 0;
+}
+
+.copyright {
+  font-size: 12px;
 }
